adding changes needed for redfish install-config.j2

--- a/ansible-ipi-install/roles/node-prep/templates/install-config.j2
+++ b/ansible-ipi-install/roles/node-prep/templates/install-config.j2
@@ -26,9 +26,10 @@ platform:
       - name: {{ hostvars[host]['name'] }}
         role: {{ hostvars[host]['role'] }}
         bmc:
-          address: ipmi://{{ hostvars[host]['ipmi_address'] }}
+          address: redfish://{{ hostvars[host]['ipmi_address'] }}/redfish/v1/Systems.Embedded.1
           username: {{ hostvars[host]['ipmi_user'] }}
           password: {{ hostvars[host]['ipmi_password'] }}
+          disableCertificateVerification: true
         bootMACAddress: {{ hostvars[host]['provision_mac'] }}
         hardwareProfile: default
 {% endfor %}
